--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<style>
+    body{
+        min-height: 50rem;
+    }
+</style>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -6,14 +11,19 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         {% endblock %}
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
+
     <body>
-        {% block body %}{% endblock %}
+        {% include "base/nav.html.twig" %}
+
+        {% block body %}
+        {% endblock %}
+        {% include "base/footer.html.twig" %}
     </body>
 </html>
